# stack

./: .gitignore  .gitmodules  .pom.xml  LIST  NLS  install-parent  nlssync  readme.txt  update-versions
deployment/node/sdu-unstable/sdu-dnsmon/: Makefile.am  Makefile.in  configure  configure.ac
deployment/node/sdu-unstable/sdu-dnsmon/debian/: README.Debian  README.source  control  copyright  postinst  prerm
deployment/node/sdu/sdu-a2utils/: ChangeLog  Makefile.am  Makefile.in  README  VERSION.av  auth-coll  authmap  configure  configure.ac
deployment/node/sdu/sdu-a2utils/debian/: README.Debian  README.source  changelog  control  copyright  (+2 more)
deployment/node/sdu/sdu-archiva/: ChangeLog  Makefile.am  Makefile.in  README  VERSION.av  archiva.rules  configure  configure.ac  post-install.sh.in  pre-remove.sh.in  sdu-archiva.conf  sdu-archiva.site
deployment/node/sdu/sdu-assembly/: ChangeLog  Makefile.am  Makefile.in  README  VERSION.av  configure  configure.ac  postnode
deployment/node/sdu/sdu-cred-a2ssl/: .gitignore  ChangeLog  Makefile.am  README  bee32-x.pem  bee32.crt  bee32.cs  bee32.pem  configure  configure.ac
deployment/node/sdu/sdu-cred-devusr/: ChangeLog  Makefile.am  Makefile.in  README  VERSION.av  configure  configure.ac  post-install.sh.in
deployment/node/sdu/sdu-cred-ec2maint/: ChangeLog  Makefile.am  Makefile.in  README  VERSION.av  cert  configure  configure.ac  post-install.sh.in  private_key  user_id
deployment/node/sdu/sdu-cred-semop/: .gitignore  Makefile.am  VERSION.av  configure.ac  crypt1.c  post-install.sh.in  pre-remove.sh.in
deployment/node/sdu/sdu-dat-seccadb/: .gitignore  80seccadb-backup  ChangeLog  Makefile.am  Makefile.in  README  VERSION.av  baksplit.in  configure  configure.ac  initenv.sh  post-install.sh.in  pre-remove.sh.in  secca-backup.in  secca-restore.in  seccadb-backup.in  seccadb-backup.job  seccadb-csv.in
deployment/node/sdu/sdu-dat-seccaj/: ChangeLog  Makefile.am  Makefile.in  README  VERSION.av  configure  configure.ac  post-install.sh.in  pre-remove.sh.in  seccaj  seccaj-admin  seccaj.1  seccaj.conf  seccaw-admin  seccaw.1
deployment/node/sdu/sdu-devenv/: Makefile.am  Makefile.in  VERSION.av  alias.db  configure  configure.ac  post-install.sh.in  pre-remove.sh.in
deployment/node/sdu/sdu-ec2metadata/: ChangeLog  Makefile.am  Makefile.in  README  VERSION.av  configure  configure.ac  ec2-metadata
deployment/node/sdu/sdu-ec2node/: ChangeLog  Makefile.am  Makefile.in  README  VERSION.av  configure  configure.ac  ec2-cmd  ec2-update-subst  ec2user-init  mount-ebs  nextdev  post-install.sh.in  pre-remove.sh.in
deployment/node/sdu/sdu-ec2utils/: ChangeLog  Makefile.am  Makefile.in  README  VERSION.av  configure  configure.ac  ec2-cmd-alt  ec2-cmd.1  ec2-init-cred  ec2-update-subst  ec2-update-subst.1  ec2user-init  ec2user-init.1  ec2utils.sh  mount-ebs  mount-ebs.1  nextdev.1  post-install.sh.in  pre-remove.sh.in
deployment/node/sdu/sdu-firefox-cn/: ChangeLog  Makefile.am  Makefile.in  README  VERSION.av  configure  configure.ac
deployment/node/sdu/sdu-miglets/: ChangeLog  Makefile.am  Makefile.in  VERSION.av  configure  configure.ac  mb_chtab  mb_csvtmp  mb_gentab  tabmap.5
deployment/node/sdu/sdu-nodelog/: ChangeLog  Makefile.am  Makefile.in  README  VERSION.av  configure  configure.ac  dg.in  post-install.sh.in
deployment/node/sdu/sdu-nodeskel/: ChangeLog  Makefile.am  Makefile.in  README  VERSION.av  configure  configure.ac  post-install.sh.in
deployment/node/sdu/sdu-pgutils/: .gitignore  ChangeLog  Makefile.am  Makefile.in  README  VERSION.av  configure  configure.ac  pg-create-shortcuts.in  pgsc.in  pgver.in  rm-pglibsyms
deployment/node/sdu/sdu-phppgadmin/: 20secca-pgsql.conf  20secca-pgsql.site  ChangeLog  Makefile.am  Makefile.in  README  VERSION.av  add_server.inc.php  configure  configure.ac  post-install.sh.in  pre-remove.sh.in
deployment/node/sdu/sdu-postfix/: ChangeLog  Makefile.am  Makefile.in  README  configure  configure.ac  master.cf  post-install.sh.in  relay.cf  sasl.cf
deployment/node/sdu/sdu-postgresql/: ChangeLog  Makefile.am  Makefile.in  README  VERSION.av  add-symlinks  backup.sh  clusterdb  configure  configure.ac  createdb  createlang  hba  initdb  pg-create-shortcuts  pg_ctl  pg_dump  pg_restore  pg_sudo  post-install.sh.in  postgres  postmaster  pre-remove.sh.in  remove-symlinks
deployment/node/sdu/sdu-seccadns/: .gitignore  ChangeLog  Makefile.am  Makefile.in  README  VERSION.av  aliases.site  bee-aliases.site  bee-reloc.site  bee.db  bee32-copy.conf  bee32-dns.site.in  bee32-fw.db  bee32-gw.db  bee32-lan.db  bee32-reloc.conf  bee32-reloc.site  bee32.db  bee32.db.in  bee32.key  bia.db  configure  configure.ac  dns-update.php.in  dnsgraph  named.conf  named.conf.in  post-install.sh.in  pre-remove.sh.in  rad.db  secca-aliases.site  seccaproject.db  substs-db  substs-host
deployment/node/sdu/sdu-seccajx-jdbc-postgresql/: .gitignore  ChangeLog  Makefile.am  Makefile.in  README  VERSION.av  configure  configure.ac  download-latest.sh  post-install.sh.in  pre-remove.sh.in
deployment/node/sdu/sdu-seccasvn/: ChangeLog  Makefile.am  Makefile.in  README  VERSION.av  configure  configure.ac
deployment/node/sdu/sdu-seccaw-jdbc-postgresql/: Makefile.am  Makefile.in  VERSION.av  configure  configure.ac  download-latest.sh  post-install.sh.in  post-remove.sh.in
deployment/node/sdu/sdu-semsutils/: .gitignore  ChangeLog  Makefile.am  Makefile.in  README  VERSION.av  cd-sems  cd-sems.sh  configure  configure.ac  deploy-this  run-server.in  segjoin  segsplit  semsd.sh  semsutils.sh  slup-build  svnrootofcwd
deployment/node/sdu/sdu-seqtool/: Makefile.am  Makefile.in  VERSION.av  configure  configure.ac  seqlint
deployment/node/sdu/sdu-site-m2mirrors/: ChangeLog  Makefile.am  Makefile.in  README  VERSION.av  configure  configure.ac  post-install.sh.in  pre-remove.sh.in
deployment/node/sdu/sdu-site-maindev/: .gitignore  ChangeLog  Makefile.am  Makefile.in  README  VERSION.av  configure  configure.ac  post-install.sh.in  pre-remove.sh.in  secca-devsite.site  secca-devsite.site.in
(+11223 files in other folders)
